--- a/templates/404.html
+++ b/templates/404.html
@@ -7,6 +7,6 @@
 </div>
 
 <div class="container">
-  <p>This is why we can't have nice things.</p>
+  <p>You didn't have to break it.</p>
 </div>
 {% endblock %}
