--- a/templates/base.html
+++ b/templates/base.html
@@ -22,5 +22,13 @@
       </div>
   </nav>
 
+    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="footer">
+        {% block footer %}
+        &copy; Made by Ryan James
+        {% endblock %}
+    </div>
+
+
   </body>
 </html>
