--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %} {% block title %} Home {% endblock %} {% block content %}
-
+<div class="jumbotron">
+  <div class="container">
+      <h1 style="text-align:center">Pic Share <span class="glyphicon glyphicon-camera"></span></h1>
+      <h6 style="text-align:center">Your Private Picture Sharing Network</h6>
+    </div>
+  </div>
 
 
 {% endblock %}
