--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,11 @@
       <ul class="nav navbar-nav">
         <li><a href="/profile">My Profile</a></li>
         <li><a href="/feed">My Feed</a></li>
+        {% if current_user.is_authenticated %}
+        <li><a href="/logout">Logout</a></li>
+        {% else %}
         <li><a href="/login">Login</a></li>
+        {% endif %}
         <ul class="nav navbar-nav navbar-right">
           <li><a href="#" class="glyphicon glyphicon-envelope"></a></li>
         </ul>
