--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %} {% block title %} Home {% endblock %} {% block content %}
 <div class="jumbotron">
   <div class="container" style="text-align:center">
+    <form class="form" method="POST" enctype="multipart/form-data" action="/{{ course_id }}/create_quiz">
+
+      
+  </div>
+</div
+<div class="jumbotron">
+  <div class="container" style="text-align:center">
       <img src= {{img}} alt="" style="text-align:center; height:400px; width: 400px">
     </div>
   </div>
