--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
       <ul class="nav navbar-nav">
         <li><a href="/profile">My Profile</a></li>
         <li><a href="/feed">My Feed</a></li>
+        <li><a href="/upload">Upload</a><li>
         {% if current_user.is_authenticated %}
         <li><a href="/logout">Logout</a></li>
         {% else %}
