--- a/templates/upload.html
+++ b/templates/upload.html
@@ -14,6 +14,7 @@
 
   {{ form.hidden_tag() }}
   {{ wtf.form_field(form.image) }}
+  {{ wtf.form_field(form.caption) }}
 
 
   <!-- Submit button -->
