--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,31 @@
-{% extends "base.html" %} {% block title %} Home {% endblock %} {% block content %}
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="https://bootswatch.com/3/sandstone/bootstrap.min.css" />
+  <meta charset="utf-8">
+</head>
+<title>Home</title>
+<body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">Pic Share</a>
+      </div>
+      </div>
+  </nav>
+  {% with messages = get_flashed_messages(with_categories=true) %}
+  <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
+  {% if messages %}
+    {% for category, message in messages %}
+    <div class="col-sm-4 col-md-offset-4">
+      <div class="alert alert-{{ category }} alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <!-- <strong>Title</strong> --> <p class='text-center'>{{ message }}</p>
+      </div>
+      </div>
+    {% endfor %}
+  {% endif %}
+{% endwith %}
 <div class="jumbotron">
   <div class="container">
       <h1 style="text-align:center">Pic Share <span class="glyphicon glyphicon-camera"></span></h1>
@@ -6,5 +33,33 @@
     </div>
   </div>
 
+  <div class="container" id="login" style="text-align:center">
+    <div class="row">
+      <div class="col-md-4">
+        <div class="container">
+  <h1>Please login</h1>
+  <br>
+  <form action="" method="post">
+    <input type="text" placeholder="Username" name="username" value="{{
+      request.form.username }}"><br>
+     <input type="password" placeholder="Password" name="password" value="{{
+      request.form.password }}"><br><br>
+    <input class="btn btn-default" type="submit" value="Login">
+    <a href="/signup" class="btn btn-default">Signup</a>
+  </form>
+</div>
+</div>
+</div>
+</div>
 
-{% endblock %}
+    <div id="content">{% block content %}{% endblock %}</div>
+    <div id="footer">
+        {% block footer %}
+
+        &copy; Made by Ryan James...
+        {% endblock %}
+    </div>
+
+
+  </body>
+</html>
