--- a/templates/feed.html
+++ b/templates/feed.html
@@ -15,6 +15,7 @@
           <span class="tag tag-default tag-pill float-xs-right">
         <h4 style="color:red; text-align:left; margin-left:400px">{{item.usname}}</h4>
         <img src= "static/img/{{item.file}}" class="rounded" alt="" style="text-align:center; height:400px; width: 400px"><br>
+        <a href="/like" class="btn btn-primary" style="text-align:right">Like</a><br>
         <h4 style="text-align:left; margin-left:400px; color:black"><strong>{{item.usname}}</strong>: {{item.caption}} </h4>
         <h6 style="text-align:right; margin-right:400px; color:gray">{{item.date}}</h6>
       </li>
